--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "method-override": "^3.0.0",
     "moment": "^2.22.2",
     "morgan": "~1.9.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "serve-favicon": "^2.5.0"
   }
 }
